packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_default_export.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1436
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';
import { sibling } from './sibling';

export default component$(() => {
    return (
        <div onClick$={() => console.log(mongodb, sibling)}>
        </div>
    );
});


============================= src/routes/_repl/[id]/[[...slug]].js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("../../../../entry______slug__.js"), "_____slug___component_vgk6N3QaQd4"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/routes/_repl/[id]/[[...slug]].tsx\"],\"names\":[],\"mappings\":\";;AAIA,6BAAe,qHAKZ\"}")
============================= _____slug___component_div_onclick_oesymv0so3o.js (ENTRY POINT)==

import { sibling } from "./src/routes/_repl/[id]/sibling";
export const _____slug___component_div_onClick_OesyMV0SO3o = ()=>console.log(mongodb, sibling);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/routes/_repl/[id]/[[...slug]].tsx\"],\"names\":[],\"mappings\":\";6DAMuB,IAAM,QAAQ,GAAG,CAAC,SAAS\"}")
/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "_____slug___component_div_onClick_OesyMV0SO3o",
  "entry": null,
  "displayName": "_____slug___component_div_onClick",
  "hash": "OesyMV0SO3o",
  "canonicalFilename": "_____slug___component_div_onclick_oesymv0so3o",
  "extension": "js",
  "parent": "_____slug___component_vgk6N3QaQd4",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    157,
    192
  ]
}
*/
============================= _____slug___component_vgk6n3qaqd4.js ==

import { _jsxQ } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const _____slug___component_vgk6N3QaQd4 = ()=>{
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./_____slug___component_div_onclick_oesymv0so3o.js"), "_____slug___component_div_onClick_OesyMV0SO3o")
    }, null, 3, "W4_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/routes/_repl/[id]/[[...slug]].tsx\"],\"names\":[],\"mappings\":\";;iDAI0B;IACtB,qBACI,MAAC;QAAI,QAAQ;;AAGrB\"}")
/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "_____slug___component_vgk6N3QaQd4",
  "entry": "entry______slug__",
  "displayName": "_____slug___component",
  "hash": "vgk6N3QaQd4",
  "canonicalFilename": "_____slug___component_vgk6n3qaqd4",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    113,
    218
  ]
}
*/
============================= entry______slug__.js (ENTRY POINT)==

export { _____slug___component_vgk6N3QaQd4 } from "./_____slug___component_vgk6n3qaqd4.js";


None
== DIAGNOSTICS ==

[]
