packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_derived_signals_children.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2728
expression: output
---
==INPUT==


import { component$, useStore, mutable } from '@builder.io/qwik';

import {dep} from './file';

export const TextContent = component$((props) => {
    return (
        <>
            <div>data-nu: {props['data-nu']}</div>
            <div>class: {props.class}</div>
        </>
    );
});

export const App = component$(() => {
    const signal = useSignal(0);
    const store = useStore({});
    return (
        <>
            <div>text</div>
            <div>{`text`}</div>
            <div>{1}</div>
            <div>{true}</div>
            <div>{`text${12}`}</div>
            <div>{typeof `text${12}` === 'string' ? 12 : 43}</div>
            <div>{signal}</div>
            <div>{signal.value}</div>
            <div>{12 + signal.value}</div>
            <div>{store.address.city.name}</div>
            <div>{store.address.city.name ? 'true' : 'false'}</div>
            <div>{dep}</div>
            <div>{dep.thing}</div>
            <div>{dep.thing + 'stuff'}</div>
            <div>{globalThing}</div>
            <div>{globalThing.thing}</div>
            <div>{globalThing.thing + 'stuff'}</div>
            <div>{signal.value()}</div>
            <div>{signal.value + unknown()}</div>
            <div>{mutable(signal)}</div>
            <div>{signal.value + dep}</div>
        </>
    );
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { _fnSignal } from "@builder.io/qwik";
import { _jsxQ } from "@builder.io/qwik";
import { _jsxC } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { Fragment as _Fragment } from "@builder.io/qwik/jsx-runtime";
import { useStore, mutable } from '@builder.io/qwik';
import { dep } from './file';
const TextContent_component_puSwpKXO7Kg = (props)=>{
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "data-nu: ",
                _fnSignal((p0)=>p0['data-nu'], [
                    props
                ], 'p0["data-nu"]')
            ], 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, [
                "class: ",
                _fnSignal((p0)=>p0.class, [
                    props
                ], "p0.class")
            ], 3, null)
        ]
    }, 3, "u6_0");
};
export const TextContent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(TextContent_component_puSwpKXO7Kg, "TextContent_component_puSwpKXO7Kg"));
const App_component_ckEPmXZlub0 = ()=>{
    const signal = useSignal(0);
    const store = useStore({});
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("div", null, null, "text", 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, `text`, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, 1, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, true, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, `text${12}`, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, typeof `text${12}` === 'string' ? 12 : 43, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, signal, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, _fnSignal((p0)=>p0.value, [
                signal
            ], "p0.value"), 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, _fnSignal((p0)=>12 + p0.value, [
                signal
            ], "12+p0.value"), 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, _fnSignal((p0)=>p0.address.city.name, [
                store
            ], "p0.address.city.name"), 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, _fnSignal((p0)=>p0.address.city.name ? 'true' : 'false', [
                store
            ], 'p0.address.city.name?"true":"false"'), 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, dep, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, dep.thing, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, dep.thing + 'stuff', 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, globalThing, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, globalThing.thing, 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, globalThing.thing + 'stuff', 3, null),
            /*#__PURE__*/ _jsxQ("div", null, null, signal.value(), 1, null),
            /*#__PURE__*/ _jsxQ("div", null, null, signal.value + unknown(), 1, null),
            /*#__PURE__*/ _jsxQ("div", null, null, mutable(signal), 1, null),
            /*#__PURE__*/ _jsxQ("div", null, null, signal.value + dep, 1, null)
        ]
    }, 1, "u6_1");
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AACA,SAAqB,QAAQ,EAAE,OAAO,QAAQ,mBAAmB;AAEjE,SAAQ,GAAG,QAAO,SAAS;0CAEW,CAAC;IACnC,qBACI;;0BACI,MAAC;gBAAI;gCAAU,EAAK,CAAC,UAAU;;;;0BAC/B,MAAC;gBAAI;gCAAQ,GAAM,KAAK;;;;;;AAGpC;AAPA,OAAO,MAAM,4BAAc,+GAOxB;kCAE2B;IAC1B,MAAM,SAAS,UAAU;IACzB,MAAM,QAAQ,SAAS,CAAC;IACxB,qBACI;;0BACI,MAAC,mBAAI;0BACL,MAAC,mBAAK,CAAC,IAAI,CAAC;0BACZ,MAAC,mBAAK;0BACN,MAAC,mBAAK;0BACN,MAAC,mBAAK,CAAC,IAAI,EAAE,GAAG,CAAC;0BACjB,MAAC,mBAAK,OAAO,CAAC,IAAI,EAAE,GAAG,CAAC,KAAK,WAAW,KAAK;0BAC7C,MAAC,mBAAK;0BACN,MAAC,mCAAK,GAAO,KAAK;;;0BAClB,MAAC,mCAAK,KAAK,GAAO,KAAK;;;0BACvB,MAAC,mCAAK,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI;;;0BAC7B,MAAC,mCAAK,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI,GAAG,SAAS;;;0BACzC,MAAC,mBAAK;0BACN,MAAC,mBAAK,IAAI,KAAK;0BACf,MAAC,mBAAK,IAAI,KAAK,GAAG;0BAClB,MAAC,mBAAK;0BACN,MAAC,mBAAK,YAAY,KAAK;0BACvB,MAAC,mBAAK,YAAY,KAAK,GAAG;0BAC1B,MAAC,mBAAK,OAAO,KAAK;0BAClB,MAAC,mBAAK,OAAO,KAAK,GAAG;0BACrB,MAAC,mBAAK,QAAQ;0BACd,MAAC,mBAAK,OAAO,KAAK,GAAG;;;AAGjC;AA5BA,OAAO,MAAM,oBAAM,+FA4BhB\"}")
== DIAGNOSTICS ==

[]
