packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_derived_signals_complext_children.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2829
expression: output
---
==INPUT==


import { component$, useStore, mutable } from '@builder.io/qwik';

import {dep} from './file';

export const App = component$(() => {
    const signal = useSignal(0);
    const store = useStore({});
    return (
        <>
            <ul id="issue-2800-result">
                {Object.entries(store).map(([key, value]) => (
                <li>
                    {key} - {value}
                </li>
                ))}
            </ul>
        </>
    );
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { _jsxQ } from "@builder.io/qwik";
import { _jsxC } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { Fragment as _Fragment } from "@builder.io/qwik/jsx-runtime";
import { useStore } from '@builder.io/qwik';
const App_component_ckEPmXZlub0 = ()=>{
    useSignal(0);
    const store = useStore({});
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: /*#__PURE__*/ _jsxQ("ul", null, {
            id: "issue-2800-result"
        }, Object.entries(store).map(([key, value])=>/*#__PURE__*/ _jsxQ("li", null, null, [
                key,
                " - ",
                value
            ], 1, "u6_0")), 1, null)
    }, 1, "u6_1");
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAAqB,QAAQ,QAAiB,mBAAmB;kCAInC;IACX,UAAU;IACzB,MAAM,QAAQ,SAAS,CAAC;IACxB,qBACI;kBACI,cAAA,MAAC;YAAG,IAAG;WACF,OAAO,OAAO,CAAC,OAAO,GAAG,CAAC,CAAC,CAAC,KAAK,MAAM,iBACxC,MAAC;gBACI;gBAAI;gBAAI;;;AAM7B;AAdA,OAAO,MAAM,oBAAM,+FAchB\"}")
== DIAGNOSTICS ==

[]
